// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders disabled if errors from props 1`] = `
<Form
  classes={
    Array [
      "push-double-top",
    ]
  }
  fieldsetTheme="flush soft-top"
  id="forgot-password"
  submit={[Function]}
>
  <legend
    className="push-half-bottom"
  >
    Reset Password
  </legend>
  <h6
    className="push-double-bottom"
  >
    confirm your email to send the reset link
  </h6>
  <Input
    defaultValue="test@test.com"
    errorText="Email does not exist"
    label="Email"
    name="email"
    placeholder="user@email.com"
    validation={[Function]}
  />
  <div>
    <a
      className="btn--small btn--dark-tertiary display-inline-block"
      onClick={[Function]}
      tabIndex={-1}
    >
      Back
    </a>
    <button
      className="push-left btn--disabled"
      type="submit"
    >
      Enter
    </button>
  </div>
</Form>
`;

exports[`renders error version 1`] = `
<Err
  error="error message"
  msg="Looks like there was a problem"
/>
`;

exports[`renders loading version 1`] = `
<Loading
  msg="Sending email to reset your password..."
/>
`;

exports[`renders success version 1`] = `
<Success
  msg="An email has been sent to test@test.com with instructions on how to reset your password!"
/>
`;

exports[`renders with props 1`] = `
<Form
  classes={
    Array [
      "push-double-top",
    ]
  }
  fieldsetTheme="flush soft-top"
  id="forgot-password"
  submit={[Function]}
>
  <legend
    className="push-half-bottom"
  >
    Reset Password
  </legend>
  <h6
    className="push-double-bottom"
  >
    confirm your email to send the reset link
  </h6>
  <Input
    defaultValue="test@test.com"
    errorText="Email does not exist"
    label="Email"
    name="email"
    placeholder="user@email.com"
    validation={[Function]}
  />
  <div>
    <a
      className="btn--small btn--dark-tertiary display-inline-block"
      onClick={[Function]}
      tabIndex={-1}
    >
      Back
    </a>
    <button
      className="push-left btn"
      type="submit"
    >
      Enter
    </button>
  </div>
</Form>
`;
